# autocrucible

./: .gitignore  CLAUDE.md  README.md  README.zh-TW.md  messages.mo  pyproject.toml
.github/workflows/: publish.yml
docs/: CHANGELOG.md  CLI-SUBSCRIPTION-BACKEND.md  CONFIG.md  CONFIG.zh-TW.md  DESIGN-DECISIONS.md  FAQ.md  FAQ.zh-TW.md  LEDGER.md  M1B-DEMO-GATE.md  M2-DEMO-GATE.md  PROFILING.md  PROFILING.zh-TW.md  guide-rust-optimization.md  i18n.md
docs/plans/: 2026-03-09-feature-completeness-design.md  2026-03-09-feature-completeness-plan.md  2026-03-10-wizard-postmortem-design.md  2026-03-10-wizard-postmortem-plan.md  2026-03-12-optimize-snake-design.md  2026-03-12-optimize-snake-plan.md  2026-03-13-fork-baseline-design.md  2026-03-13-fork-baseline-plan.md  2026-03-13-new-examples-design.md  2026-03-13-new-examples-impl.md  2026-03-13-snake-viewer-design.md  2026-03-15-v0.4.0-implementation-plan.md  2026-03-15-v0.4.0-improvements-design.md  2026-03-16-max-iterations-design.md  2026-03-16-max-iterations-impl.md  2026-03-16-optimize-2048-design.md  2026-03-16-optimize-2048-impl.md  2026-03-16-optimize-rapier-cylinder-design.md  2026-03-16-optimize-rapier-cylinder-impl.md  2026-03-16-persistent-artifacts-design.md  2026-03-16-persistent-artifacts-impl.md  2026-03-17-optimize-cipher-design.md  2026-03-17-optimize-monte-carlo-design.md  2026-03-17-optimize-monte-carlo-impl.md  2026-03-17-optimize-pathfind-design.md  2026-03-17-search-strategy-stability-design.md  2026-03-17-search-strategy-stability-impl.md  2026-03-17-sensitive-file-protection-design.md  2026-03-17-sensitive-file-protection-plan.md
examples/optimize-compress/: .gitignore  compress.py  corpus.txt  evaluate.py  generate_corpus.py
examples/optimize-gomoku/: .gitignore  evaluate.py  (+1 more)
scripts/: ab_test_critic.py  smoke_ledger_e2e.py
tests/: conftest.py  test_agents.py  test_agents_factory.py  test_agents_path_acl.py  test_bfts_integration.py  test_budget.py  test_cli.py  test_cli_subscription.py  test_codex_cli_adapter.py  test_compliance_check_cli.py  test_config.py  test_context.py  test_demo_gate.py  test_docs_exist.py  test_gemini_cli_adapter.py  test_git_manager.py  test_guardrails.py  test_i18n.py  test_integration.py  test_ledger.py  test_locking.py  test_m3_polish.py  test_oauth_estimated_cost.py  test_orchestrator.py  test_orchestrator_ledger.py  test_postmortem.py  test_preflight.py  test_reporter_compare.py  test_reporter_html.py  test_reporter_interactive.py  test_results.py  test_runner.py  test_sandbox.py  test_sealing.py  test_smolagents_backend.py  test_smolagents_claude_sdk_model.py  test_smolagents_tools.py  test_snake_game.py  test_strategy.py  test_validator.py  (+1 more)
(+221 files in other folders)
