[project]
name = "crucible"
version = "0.1.0"
description = "General-purpose autonomous experiment platform"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.scripts]
crucible = "crucible.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crucible"]

[tool.pytest.ini_options]
testpaths = ["tests"]
