[project]
name = "autocrucible"
version = "0.7.0"
description = "Autonomous experiment platform — let LLM agents optimize anything through iterative edit-evaluate loops"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "suzuke" },
]
keywords = ["llm", "agent", "optimization", "experiment", "autonomous"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "claude-agent-sdk>=0.1.6",
]

[project.urls]
Homepage = "https://github.com/suzuke/autocrucible"
Repository = "https://github.com/suzuke/autocrucible"
Issues = "https://github.com/suzuke/autocrucible/issues"

[project.scripts]
crucible = "crucible.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crucible"]

[tool.hatch.build.targets.wheel.force-include]
".claude/skills/crucible-setup/SKILL.md" = "crucible/data/scaffold_reference.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "expensive: opt-in slow / real-LLM tests, run with `pytest -m expensive`",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "requests>=2.28",
]
